--- a/.env.stage.dev
+++ b/.env.stage.dev
@@ -4,3 +4,4 @@ DB_PORT=5434
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=task-management
+JWT_SECRET=65S7t=()ySVM$TmqL:yH;<M.&<Jgre.u@d4$kfG2?[QA"^_+y3habxaQkX8&59aN
